tests/baselines/reference/override11.errors.txt
tests/cases/conformance/override/override11.ts(6,18): error TS1090: 'override' modifier cannot appear on a parameter.


==== tests/cases/conformance/override/override11.ts (1 errors) ====
    class Base {
        foo = 1;
    }
    
    class Sub extends Base {
        constructor (override public foo: number) {
                     ~~~~~~~~
!!! error TS1090: 'override' modifier cannot appear on a parameter.
            super();
        }
    }
    